--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/ArleyBetancourt/ArleyBetancourt.github.io/master/images/Empresario.png" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>Arley Betancourt</strong>, Bussinessman.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,12 +23,12 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>Arley Betancourt - Bussinessman.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>A lo largo de mi carrera profesional,he construido negocios de alto impacto.</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/arley-betancourt-rios-362405118/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
